feat: implement multiple institution support for penalties in database and UI
- Updated the database schema to allow multiple institutions to be associated with a penalty, including the creation of a new `pena_instituicao` table.
- Modified the `RegistroDeTrabalho` table to include a foreign key for institutions.
- Enhanced the UI in `CadastrarPenaController` to support multiple institution selection using checkboxes.
- Updated relevant controllers to handle institution data during penalty registration and updates.
- Improved data retrieval methods to reflect the new relationships between penalties and institutions.